# youtobe-parser

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  daily_discovery.py  discovery_dashboard.py  docker-compose.image.yml  docker-compose.yml  dub_main.py  main.py  package-lock.json  pyproject.toml  requirements.txt  test_en.srt  test_en_translated.ass
.github/workflows/: docker-av-service.yml  gh-pages.yml
app/: __init__.py  audio_separation.py  audio_utils.py  config.py  downloader.py  dubbing_mixer.py  dubbing_pipeline.py  dubbing_segments.py  ffmpeg_tools.py  logging_utils.py  main.py  pipeline.py  settings.py  srt_tools.py  subtitles.py  transcriber.py  translator.py  tts_engine.py
app/api/: routes.py
app/core/: config.py  pot_client.py  task_store.py  translator.py  worker.py
app/discovery/: __init__.py  models.py  repository.py  scoring.py  service.py  youtube_discovery.py
app/models/: schemas.py
docs/: DEPLOY.md  RPMD.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: download_video.py  parse_and_download.py  parse_best_url.py  srt_to_ass_llm.py  test_async_compose.py  test_m4a_to_wav.py  update-container.sh  update_av_service_image.sh
server/: CMakeLists.txt  Dockerfile
tests/: download_demucs_model.py  download_fast_whisper_model.py  run_stage_checks.py  test_downloader_stage.py  test_dubbing_pipeline_stage.py  test_ffmpeg_stage.py  test_merge_ass_audio_video.py  test_pipeline_e2e.py  test_subtitles_stage.py  test_transcriber_stage.py  test_translator_stage.py
(+25 files in other folders)
