[project]
name = "youtobe-parser"
version = "0.1.0"
description = "Private high-performance YouTube video parser & download web system"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "yt-dlp>=2024.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
serve = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
