[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtobe-parser"
version = "1.0.0"
description = "Pure Python high-speed media pipeline: download, transcribe, translate, compose"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.0.0",
    "openai>=1.51.0",
    "faster-whisper>=1.1.0",
    "imageio-ffmpeg>=0.5.1",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
yp-run = "main:main"

[tool.setuptools.packages.find]
include = ["app", "app.*"]
